install python-docutils with apt

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,6 +54,8 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install autoprefixer postcss postcss-cli
+          sudo apt install python-docutils
+          pip install rst2html
 
       - name: Build with Hugo
         env:
