--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install autoprefixer postcss postcss-cli
-          sudo apt install python-docutils
-          pip install rst2html
+          sudo apt-get install -y python-docutils
+          pip install -r requirements.txt
 
       - name: Build with Hugo
         env:
