--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install autoprefixer postcss postcss-cli
-          sudo apt-get install -y python-docutils
+          sudo apt-get install -y python3-docutils
           pip install -r requirements.txt
 
       - name: Build with Hugo
