--- a/hugo.toml
+++ b/hugo.toml
@@ -194,4 +194,4 @@ enable = false
 [security]
   enableInlineShortcodes = false
   [security.exec]
-    allow = ['^(dart-)?sass(-embedded)?$', '^go$', '^npx$', '^postcss$', '^rst2html$]
+    allow = ['^(dart-)?sass(-embedded)?$', '^go$', '^npx$', '^postcss$', '^rst2html$']
