--- a/hugo.toml
+++ b/hugo.toml
@@ -190,3 +190,9 @@ enable = false
   [[module.imports]]
     path = "github.com/google/docsy/dependencies"
     disable = false
+
+[menu]
+  [[menu.main]]
+    name = "Docs"
+    weight = 30
+    url = "https://ansiblemiddleware.com/"
