--- a/hugo.toml
+++ b/hugo.toml
@@ -13,6 +13,18 @@ enableRobotsTXT = true
 # Will give values to .Lastmod etc.
 enableGitInfo = true
 
+# Security settings
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^(dart-)?sass(-embedded)?$', '^go$', '^npx$', '^postcss$', '^git$']
+    osEnv = ['(?i)^((HTTPS?|NO)_PROXY|PATH(EXT)?|APPDATA|TE?MP|TERM|GO\w+|(XDG_CONFIG_)?HOME|USERPROFILE|SSH_AUTH_SOCK|DISPLAY|LANG|SYSTEMDRIVE)$']
+  [security.funcs]
+    getenv = ['^HUGO_', '^CI$']
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
+
 # Comment out to enable taxonomies in Docsy
 # disableKinds = ["taxonomy", "taxonomyTerm"]
 
@@ -73,6 +85,9 @@ description = "Ansible Middleware docs"
       block = true
     [markup.goldmark.renderer]
       unsafe = true
+  
+# Suppress specific warnings
+ignoreLogs = ['warning-goldmark-raw-html']
   [markup.highlight]
     # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
     style = "tango"
@@ -86,8 +101,16 @@ description = "Ansible Middleware docs"
 section = ["HTML", "print"]
 
 [params]
-copyright = "Ansible Middleware Collections"
+copyright = "Ansible Middleware - Automating Enterprise Middleware at Scale"
 privacy_policy = ""
+
+# Disable KaTeX math rendering to avoid conflicts with $ in code blocks
+[params.katex]
+enable = false
+
+# Use Font Awesome CDN instead of SCSS
+[params.icons]
+font_awesome_version = "6.4.0"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
@@ -169,6 +192,7 @@ enable = false
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
   name = "ansible-middleware-core@redhat.com"
+  url = "mailto:ansible-middleware-core@redhat.com"
   icon = "fa fa-envelope"
   desc = "Reach us at ansible-middleware-core@redhat.com"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
@@ -183,7 +207,7 @@ enable = false
   # replacements = "github.com/google/docsy -> ../../docsy"
   [module.hugoVersion]
     extended = true
-    min = "0.110.0"
+    min = "0.146.0"
   [[module.imports]]
     path = "github.com/google/docsy"
     disable = false
